@@ -44,13 +44,6 @@ Appearance of the list of printers to select.
     <ref>list</ref>
   </field>
   <field>
-    <name>number_of_copies_appearance</name>
-    <descr><![CDATA[
-Appearance of the number of copies field.
-]]></descr>
-    <ref>input_field</ref>
-  </field>
-  <field>
     <name>print_all_pages_appearance</name>
     <descr><![CDATA[
 Appearance of the "All pages" radio button
@@ -63,13 +56,6 @@ Appearance of the "All pages" radio button
 Appearance of the "Pages" radio button
 ]]></descr>
     <ref>image_button</ref>
-  </field>
-  <field>
-    <name>page_range_appearance</name>
-    <descr><![CDATA[
-Appearance of the "Pages" field
-]]></descr>
-    <ref>input_field</ref>
   </field>
   <field>
     <name>orientation_appearance</name>
