@@ -1,3 +1,7 @@
+2019-06-05  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Create <input_field>s using the theme file.
+
 2019-06-02  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Create <button>s using the theme file.
